Унифицируем описание протоколов через новый environment \protocol

--- a/protocols/index.tex
+++ b/protocols/index.tex
@@ -1,6 +1,17 @@
 \chapter{Криптографические протоколы}\index{протокол!криптографический}\label{chapter-protocols}
 \selectlanguage{russian}
 
+% Протокол без разрывов между страницами, но зато
+% разрешаем разрывать страницу до и после определения протокола
+% (по умолчанию itemize / enumerate так не разрешают)
+\newsavebox{\protocolbox}
+\makeatletter\newenvironment{protocol}{%
+\begin{samepage}%
+\@beginparpenalty=\@lowpenalty%
+\@endparpenalty=\@lowpenalty%
+\begin{itemize}}
+{\end{itemize}\end{samepage}}\makeatother
+
 \input{definitions}
 
 \input{writing-rules}
