--- a/protocols/needham-schroeder.tex
+++ b/protocols/needham-schroeder.tex
@@ -9,13 +9,13 @@
     \caption{Схема взаимодействия абонентов и доверенного центра в протоколе Нидхема~---~Шрёдера\label{fig:key_distribution-needham-schroeder}}
 \end{figure}
 
-\begin{samepage}\begin{itemize}
+\begin{protocol}
 	\item[(1)] $ Alice	\to \{ A, B, R_A \}						\to Trent $
 	\item[(2)] $ Trent	\to \{ E_A \left( R_A, B, K, E_B \left( K, A \right) \right) \}	\to Alice $
 	\item[(3)] $ Alice	\to \{ E_B \left( K, A \right) \}				\to Bob $
 	\item[(4)] $ Bob	\to \{ E_K \left( R_B \right) \}				\to Alice $
 	\item[(5)] $ Alice	\to \{ E_K \left( R_B - 1 \right) \}				\to Bob $
-\end{itemize}\end{samepage}
+\end{protocol}
 
 Протокол удобен с точки зрения сетевого взаимодействия участников (рис.~\ref{fig:key_distribution-needham-schroeder}). И общение с доверенным центром, и с конечным участником (Бобом) начинается только по инициативе первого участника (Алисы). При возникновении любых проблем передачи пакетов их видит именно то лицо, которое заинтересованно в получении ключей и доступов\footnote{Сравните с протоколом Yahalom, в котором при возникновении проблемы общения Трента и Алисы на третьем проходе Тренту потребовалось бы уведомить об этом Боба, а Бобу, в свою очередь, Алису.}. И если бы общение шло с использование протокола TCP/IP, потребовалось бы всего 2 сессии протокола TCP для выработки ключа. Причём последнюю сессию можно не закрывать, а использовать как сессию для дальнейшего взаимодействия уже с ключом $K$.
 
@@ -23,7 +23,7 @@
 
 Однако протокол уязвим к атаке с известным сеансовым ключом. Если злоумышленник сумеет в какой-то момент времени получить ранее использованный сессионный ключ $K$, он сможет убедить Боба, что он является Алисой, и что это новый сессионный ключ. Для этого ему понадобится переданный ранее по открытому каналу пакет из пункта 3 протокола.
 
-\begin{itemize}
+\begin{protocol}
 	\item[(1)] $ Eva \to \{ A, B, R_A \} \to Trent $
 	\item[(2)] $ Trent \to \{ E_A \left( R_A, B, K, E_B \left( K, A \right) \right) \}	\to Alice $
 	\item[(3)] $ Alice \to \{ E_B \left( K, A \right) \} \to Bob $
@@ -33,7 +33,7 @@
 	\item[(6)] $ Eva~(Alice) \to \{ E_B \left( K, A \right) \} \to Bob $
 	\item[(7)] $ Bob \to \{ E_K \left( R_B \right) \} \to Eva~(Alice) $
 	\item[(8)] $ Eva (Alice) \to \{ E_K \left( R_B - 1 \right) \} \to Bob $
-\end{itemize}
+\end{protocol}
 
 Относительно мелкий недостаток протокола состоит ещё и в том, что во втором пакете доверенный центр в зашифрованном виде передаёт то, что в третьем шаге пересылается по открытому каналу ($E_B \left( K, A \right)$).
 
