--- a/protocols/wide-mouth_frog.tex
+++ b/protocols/wide-mouth_frog.tex
@@ -7,11 +7,11 @@
     \caption{Схема взаимодействия абонентов и доверенного центра в протоколе Wide-Mouth Frog\label{fig:key_distribution-wide-mouth_frog}}
 \end{figure}
 
-\begin{enumerate}
+\begin{protocol}
 	\item[(1)] Алиса генерирует новый сеансовый ключ $K$
     \item[{}] $Alice \to \{ A, E_A \left( T_A, B, K \right) \} \to Trent$
 	\item[(2)] $Trent \to \{ E_B \left( T_T, A, K \right) \} \to Bob$
-\end{enumerate}
+\end{protocol}
 
 По окончании протокола у Алисы и Боба есть общий сеансовый ключ $K$.
 
@@ -26,7 +26,7 @@
 
 В 1995 году Рос Андерсон и Роджер Нидхем (\langen{Ross Anderson, Roger Needham}, \cite{Anderson:Needham:1995}) предложили вариант атаки на протокол, при котором злоумышленник (Ева) может бесконечно продлевать срок действия конкретного сеансового ключа. Идея атаки в том, что после окончания протокола злоумышленник будет посылать доверенному центру назад его же пакеты, дополняя их идентификаторами якобы инициирующего абонента.
 
-\begin{samepage}\begin{itemize}
+\begin{protocol}
 	\item[(1)] $Alice \to \{ A, E_A \left( T_A, B, K \right) \} \to Trent$
 	\item[(2)] $Trent \to \{ E_B \left( T_T, A, K \right) \} \to Bob$
 	\item[(3)] $Eva \to \{ B, E_B \left( T_A, A, K \right) \} \to Trent$
@@ -34,7 +34,7 @@
 	\item[(5)] $Eva \to \{ A, E_A \left( T'_T, B, K \right) \} \to Trent$
 	\item[(6)] $Trent \to \{ E_B \left( T''_T, A, K \right) \} \to Bob$
 	\item[{}] Повторять проходы 3 и 5, пока не пройдёт время, нужное для получения $K$.
-\end{itemize}\end{samepage}
+\end{protocol}
 
 С точки зрения доверенного центра, шаги 1, 3 и 5 являются корректными пакетами, инициирующими общение абонентов между собой. Метки времени в них корректны (если Ева будет успевать вовремя эти пакеты посылать). С точки зрения легальных абонентов каждый из пакетов является приглашением другого абонента начать общение. В результате произойдёт две вещи:
 
@@ -45,19 +45,19 @@
 
 Вторая атака 1997 года Гэвина Лоу (\langen{Gavin Lowe}, \cite{Lowe:1997}) проще в реализации. В результате этой атаки Боб уверен, что Алиса аутентифицировала себя перед доверенным центром и хочет начать второй сеанс общения. Что, конечно, не является правдой, так как второй сеанс инициирован злоумышленником.
 
-\begin{samepage}\begin{itemize}
+\begin{protocol}
 	\item[(1)] $Alice \to \{ A, E_A \left( T_A, B, K \right) \} \to Trent$
 	\item[(2)] $Trent \to \{ E_B \left( T_T, A, K \right) \} \to Bob$
 	\item[(3)] $Eva \to \{ E_B \left( T_T, A, K \right) \} \to Bob$
-\end{itemize}\end{samepage}
+\end{protocol}
 
 В той же работе Лоу предложил модификацию протокола, вводящую явную взаимную аутентификацию абонентов с помощью случайной метки $R_B$ и проверки, что Алиса может расшифровать пакет с меткой, зашифрованной общим сеансовым ключом абонентов $K$. Однако данная модификация приводит к тому, что протокол теряет своё самое главное преимущество перед другими протоколами -- простоту.
 
-\begin{samepage}\begin{itemize}
+\begin{protocol}
 	\item[(1)] $Alice \to \{ A, E_A \left( T_A, B, K \right) \} \to Trent$
 	\item[(2)] $Trent \to \{ E_B \left( T_T, A, K \right) \} \to Bob$
 	\item[(3)] $Bob \to \{ E_K \left( R_B \right) \} \to Alice$
 	\item[(4)] $Alice \to \{ E_K \left( R_B + 1 \right) \} \to Bob$
-\end{itemize}\end{samepage}
+\end{protocol}
 
 \index{протокол!Wide-Mouth Frog|)}
