Обновлён раздел про трёхпроходные протоколы

--- a/protocols/three-pass.tex
+++ b/protocols/three-pass.tex
@@ -9,29 +9,28 @@
 	\item Алиса и Боб соединены незащищённым каналом связи, открытым для прослушивания (но не для модификации) злоумышленником.
 	\item Каждая из сторон имеет пару из открытого и закрытого ключей $K_A$, $k_A$, $K_B$, $k_B$ соответственно.
 	\item Сторонами выбрана и используется коммутативная функция шифрования:
-	\begin{align*}
-		D_{A} \left( E_{A} \left( X \right) \right)	&= X		& ~~\forall ~ X, \left\{ K_A, k_a \right\}; \\
-		E_{A} \left( E_{B} \left( X \right) \right)	&= E_B \left( E_A \left( X \right) \right) & ~~\forall ~ K_A, K_B, X.
-	\end{align*}
+	\[\begin{array}{lll}
+		D_{A} \left( E_{A} \left( X \right) \right)	= X                                       & \forall X, \left\{ K_A, k_a \right\}; \\
+		E_{A} \left( E_{B} \left( X \right) \right)	= E_B \left( E_A \left( X \right) \right) & \forall ~ K_A, K_B, X.
+	\end{array}\]
 \end{itemize}
 
-Протокол состоит из трёх шагов (отсюда и название).
-\begin{enumerate}
-    \item Алиса создаёт новый секретный сеансовый ключ $K_S$, шифрует его с помощью своего ключа $K_A$ и посылает сообщение Бобу:
-        \[ Alice \to ~ E_A \left( K_S \right) ~ \to Bob. \]
-    \item Боб получает это сообщение, шифрует его с помощью своего ключа $K_B$ и посылает сообщение Алисе:
-        \[ Bob \to ~ E_B \left( E_A \left( K_S \right) \right) ~ \to Alice. \]
-    Алиса, получив сообщение $E_B \left( E_A \left( K_S \right) \right)$, использует свой закрытый ключ $k_A$ для расшифрования:
-	\[ D_A \left( E_B \left( E_A \left( K_S \right) \right) \right) = D_A \left( E_A \left( E_B \left( K_S \right) \right) \right) = E_B \left( K_S \right). \]
-    \item Алиса передаёт Бобу сообщение, в котором новый секретный сеансовый ключ зашифрован уже только ключом Боба:
-        \[ Alice \to ~ E_B \left( K_S \right) ~ \to Bob. \]
-    Боб, получив сообщение $E_B \left( K_S \right)$, использует свой ключ $k_B$ для расшифрования:
-	\[ D_B \left( E_B \left( K_S \right) \right) = K_S. \]
-\end{enumerate}
+Протокол состоит из трёх проходов с передачей сообщений (отсюда и название) и одного заключительного, на котором Боб получает ключ.
+\begin{protocol}
+    \item[(1)] Алиса выбирает новый сеансовый ключ $K$
+    \item[{}] $Alice \to \left\{ E_A \left( K \right) \right\} \to Bob$
+    \item[(2)] $Bob \to \left\{ E_B \left( E_A \left( K \right) \right) \right\} \to Alice$
+    \item[(3)] Алиса, используя коммутативность функции шифрования,
+	\[ D_A \left( E_B \left( E_A \left( K \right) \right) \right) = D_A \left( E_A \left( E_B \left( K \right) \right) \right) = E_B \left( K \right). \]
+    \item[{}] $Alice \to \left\{ E_B \left( K \right) \right\} \to Bob$
+    \item[(4)] Боб расшифровывает $D_B \left( E_B \left( K \right) \right) = K$
+\end{protocol}
 
-В результате стороны получают общий секретный ключ $K_S$.
+В результате стороны получают общий секретный ключ $K$.
 
-Общим недостатком всех подобных протоколов является отсутствие аутентификации сторон. Конечно, в случае пассивного криптоаналитика это не требуется, но в реальной жизни всё-таки нужно рассматривать все возможные модели (в том числе активного криптоаналитика) и использовать такие протоколы, которые предполагают взаимную аутентификацию сторон.
+Общим недостатком всех подобных протоколов является отсутствие аутентификации сторон. Конечно, в случае пассивного криптоаналитика это не требуется, но в реальной жизни всё-таки нужно рассматривать все возможные модели (в том числе активного криптоаналитика) и использовать такие протоколы, которые предполагают взаимную аутентификацию сторон. Также, в отличие от схемы Диффи~---~Хеллмана, новый ключ выбирается инициатором сеанса, что позволяет инициатору, исходя не из лучших побуждений, заставить второго участника использовать устаревший сеансовый ключ.
+
+Если говорить в терминах свойств безопасности, то все представители данного класса протоколов декларируют только аутентификацию ключа (G7). В отличие от схемы Диффи~---~Хеллмана, трёхпроходные протоколы не требуют выбора новых <<мастер>>-ключей для каждого сеанса протокола, из-за чего нельзя гарантировать ни совершенную прямую секретность (G9), ни формирование новых ключей (G10).
 
 \subsection{Тривиальный вариант}
 
@@ -40,26 +39,19 @@
 Перед началом протокола обе стороны имеют свои секретные ключи $K_A$ и $K_B$, представляющие собой случайные двоичные последовательности с равномерным распределением символов. Функция шифрования определяется как $E_i( X ) = X \oplus K_i$, где $X$ это сообщение, а $K_i$ -- секретный ключ. Очевидно, что:
 \[ \forall i, j, X: E_i \left( E_j \left( X \right) \right) = X \oplus K_j \oplus K_i = X \oplus K_i \oplus K_j = E_j \left( E_i \left( X \right) \right) \]
 
-\begin{enumerate}
-    \item Алиса генерирует новый сеансовый ключ, шифрует его своим секретным ключом $K_A$ и посылает Бобу:
-            \[\begin{array}{l}
-		E_A(K) = K \oplus K_A, \\
-		Alice \to ~ E_A(K) ~ \to Bob.
-	    \end{array}\]
-    \item Боб шифрует полученное сообщение уже своим ключом и отправляет Алисе:
-            \[\begin{array}{l}
-		E_B(E_A(K)) = K \oplus K_A \oplus K_B, \\
-		Bob \to ~ E_B(E_A(K)) ~ \to Alice.
-	    \end{array}\]
-    \item Используя коммутативность операции шифрования, Алиса <<снимает>> шифрование своим ключом и отправляет результат Бобу:
-            \[ D_A \left( E_B \left( E_A \left( K \right) \right) \right) = K \oplus K_A \oplus K_B \oplus K_A = K \oplus K_B = E_B \left( K \right). \]
-            \[ Alice \to ~ E_B \left( K \right) ~ \to Bob. \]
-    Боб, получив сообщение $K \oplus K_B$, выполняет расшифрование:
-            \[ D_B( E_B( K ) ) = K \oplus K_B \oplus K_B = K. \]
-    В результате Алиса и Боб знают общий сеансовый ключ $K$.
-\end{enumerate}
+\begin{protocol}
+    \item[(1)] Алиса выбирает новый сеансовый ключ $K$
+    \item[{}] $Alice \to \left\{ E_A \left( K \right) = K \oplus K_A \right\} \to Bob$
+    \item[(2)] $Bob \to \left\{ E_B \left( E_A \left( K \right) \right) = K \oplus K_A \oplus K_B \right\} \to Alice$
+    \item[(3)] Алиса, используя коммутативность функции шифрования,
+	\[ D_A \left( E_B \left( E_A \left( K \right) \right) \right) = K \oplus K_A \oplus K_B \oplus K_A = K \oplus K_B = E_B \left( K \right). \]
+    \item[{}] $Alice \to \left\{ E_B \left( K \right) = K \oplus K_B \right\} \to Bob$
+    \item[(4)] Боб расшифровывает $D_B \left( E_B \left( K \right) \right) = K \oplus K_B \oplus K_B = K$
+\end{protocol}
 
-Предложенный выбор коммутативной функции шифрования совершенной секретности был назван неудачным, так как существуют ситуации, при которых криптоаналитик может определить ключ $K$. Предположим, что криптоаналитик перехватил все три сообщения:
+По окончании сеанса протокола Алиса и Боб знают общий сеансовый ключ $K$.
+
+Предложенный выбор коммутативной функции шифрования совершенной секретности является неудачным, так как существуют ситуации, при которых криптоаналитик может определить ключ $K$. Предположим, что криптоаналитик перехватил все три сообщения:
     \[ K \oplus K_A, ~~ K \oplus K_A \oplus K_B, ~~ K \oplus K_B. \]
 Сложение по модулю 2 всех трёх сообщений даёт ключ $K$. Поэтому такая система шифрования не применяется.
 
@@ -74,37 +66,30 @@ a \times a' = 1 \mod (p-1), \\
 \forall X: (X^a)^{a'} = X. \\
 \end{array}\]
 
-Последнее выражение верно по следствию из малой теоремы Ферма\index{теорема!Ферма малая}. Операции шифрования и расшифрования определяются следующим образом (на примере Алисы):
-\[\begin{array}{ll}
-\forall X < p:	& E_A( X ) = X^{a} \mod p, \\
-		& D_A( X ) = X^{a'} \mod p, \\
-		& D_A( E_A( X ) ) = X^{aa'} = X \mod p. \\
+Последнее выражение верно по следствию из малой теоремы Ферма\index{теорема!Ферма малая}. Операции шифрования и расшифрования определяются следующим образом:
+\[\begin{array}{lll}
+\forall M < p: & C = E( M ) = M^{a}            & \mod p, \\
+               & D( C ) = C^{a'}               & \mod p, \\
+               & D_A( E_A( M ) ) = M^{aa'} = M & \mod p. \\
 \end{array}\]
 
-\begin{enumerate}
-    \item Алиса создаёт новый сеансовый ключ $K < p$, шифрует его своим секретным ключом $a$ и посылает сообщение Бобу:
-            \[\begin{array}{l}
-		E_A(K) = K ^ a \mod p, \\
-		Alice \to ~ E_A(K) ~ \to Bob.
-	    \end{array}\]
-    \item Боб шифрует полученное сообщение уже своим ключом и отправляет Алисе:
-            \[\begin{array}{l}
-		E_B(E_A(K)) = K^{ab} \mod p, \\
-		Bob \to ~ E_B(E_A(K)) ~ \to Alice.
-	    \end{array}\]
-    \item Используя коммутативность операции шифрования, Алиса <<снимает>> шифрование своим ключом и отправляет результат Бобу:
-            \[ D_A \left( E_B \left( E_A \left( K \right) \right) \right) = \left( K^{ab} \right) ^{a'} = K^{aa'b} = K^{b} = E_B \left( K \right) \mod p. \]
-            \[ Alice \to ~ E_B \left( K \right) ~ \to Bob. \]
-    Боб, получив сообщение $K \oplus K_B$, выполняет расшифрование:
-            \[ D_B( E_B( K ) ) = K \oplus K_B \oplus K_B = K. \]
-    В результате Алиса и Боб знают общий сеансовый ключ $K$.
-\end{enumerate}
+\begin{protocol}
+    \item[(1)] Алиса выбирает новый сеансовый ключ $K < p$
+    \item[{}] $Alice \to \left\{ E_A \left( K \right) = K^a \bmod p \right\} \to Bob$
+    \item[(2)] $Bob \to \left\{ E_B \left( E_A \left( K \right) \right) = K^{ab} \bmod p \right\} \to Alice$
+    \item[(3)] Алиса, используя коммутативность функции шифрования,
+	\[ D_A \left( E_B \left( E_A \left( K \right) \right) \right) = K^{aba'} = K^b = E_B \left( K \right) \mod p. \]
+    \item[{}] $Alice \to \left\{ E_B \left( K \right) = K^b \right\} \to Bob$
+    \item[(4)] Боб расшифровывает $D_B \left( E_B \left( K \right) \right) = K^{bb'} \bmod p = K$
+\end{protocol}
+
+По окончании сеанса протокола Алиса и Боб знают общий сеансовый ключ $K$.
 
 Предположим, что криптоаналитик перехватил три сообщения:
 \[ \begin{array}{l}
-    y_1 = K^a \mod p, \\
-    y_2 = K^{ab} \mod p, \\
-    y_3 = K^b \mod p. \\
+    y_1 = K^a \bmod p, \\
+    y_2 = K^{ab} \bmod p, \\
+    y_3 = K^b \bmod p. \\
 \end{array} \]
 
 Чтобы найти ключ $K$, криптоаналитику надо решить систему из этих трёх уравнений, что имеет очень большую вычислительную сложность, неприемлемую с практической точки зрения, если все три числа $a, b, ab$ достаточно велики. Предположим, что $a$ (или $b$) мало. Тогда, вычисляя последовательные степени $y_3$ (или $y_1$), можно найти $a$ (или $b$), сравнивая результат с $y_2$. Зная $a$, легко найти $a^{-1}\mod(p-1)$ и $K=(y_1)^{a^{-1}}\mod p$.
