Перенёс текст приложений в отдельную папку appendix

--- a/appendix/groups.tex
+++ b/appendix/groups.tex
@@ -140,8 +140,7 @@
 \end{table}
 \exampleend
 
-
-\subsection{Группа $\Z_n^*$}
+\subsection{Группа $\mathbb{Z}_n^*$}
 
 \emph{Функция Эйлера}\index{функция!Эйлера} $\varphi(n)$ определяется как количество натуральных чисел, взаимно простых с $n$ на отрезке от 1 до $n-1$.
 
