Поправлены все ошибки компиляции PDF в приложении

--- a/_settings.tex
+++ b/_settings.tex
@@ -4,7 +4,7 @@
 \usepackage{cmap}
 \usepackage[X2, T2A]{fontenc}
 \usepackage[utf8]{inputenc}
-\usepackage[english,french,german,italian,latin,russian]{babel}
+\usepackage[english,french,german,italian,russian]{babel}
 \usepackage{indentfirst}                % Красная строка в первом абзаце
 % Подключение amsmath также даёт поддержку автоматических \dots
 % см. http://tex.stackexchange.com/questions/77737/dots-versus-ldots-is-there-a-difference
@@ -150,7 +150,7 @@
 \newcommand{\langfr}[1]{фр. \foreignlanguage{french}{\textit{#1}}}
 \newcommand{\langen}[1]{англ. \foreignlanguage{english}{\textit{#1}}}
 \newcommand{\langit}[1]{итал. \foreignlanguage{italian}{\textit{#1}}}
-\newcommand{\langlat}[1]{лат. \foreignlanguage{latin}{\textit{#1}}}
+\newcommand{\langlat}[1]{лат. \foreignlanguage{italian}{\textit{#1}}}
 
 % Русская типографика
 \renewcommand\leq{\leqslant}
