--- a/appendix/groups.tex
+++ b/appendix/groups.tex
@@ -78,7 +78,7 @@
 Задача разложения числа на множители является трудной для вычисления. На сложности её решения, например, основана криптосистема RSA\index{криптосистема!RSA}. Поэтому при создании больших групп желательно заранее знать разложение порядка группы на множители для возможности выбора генератора.
 
 
-\subsection{Группа $\Z_p^*$}\label{section-group-multiplicative}
+\subsection{Группа \texorpdfstring{$\Z_p^*$}{Zp*}}\label{section-group-multiplicative}
 
 \emph{Группой $\Z_p^*$} называется группа\index{группа!$\Z_p^*$}
     \[ \Z_p^* = \{1, 2, \dots, p-1 \}, \]
@@ -118,12 +118,12 @@
 
 \begin{table}[!ht]
     \centering
-    \caption {Генераторы и циклические подгруппы группы $\Gr=\Z_{13}^*$\label{tab:Zp-sample}}
-    \resizebox{\textwidth}{!}{ \begin{tabular}{|c|p{0.66\textwidth}|c|}
+    \caption {Элементы группы $\Z_{13}^*$ и порождаемые ими циклические подгруппы. Генераторами являются элементы, которые порождают всю циклическую группу. В группе $\Z_{13}^*$ такими элементами являются 2, 6, 7 и 11.\label{tab:Zp-sample}}
+    \begin{tabular}{|c|l|c|}
         \hline
         Элемент & Порождаемая группа или подгруппа & Порядок \\
         \hline
-         \rule{}{0,4cm}1 & $\Gr^{(1)} = \{  1 \}$ & 1 \\
+         1 & $\Gr^{(1)} = \{  1 \}$ & 1 \\
          2 & $\Gr = \{ 2, 4, 8, 3, 6, 12, 11, 9, 5, 10, 7, 1 \}$ & 12, ген. \\
          3 & $\Gr^{(3)} = \{ 3, 9, 1 \}$ & 3 \\
          4 & $\Gr^{(6)} = \{ 4, 3, 12, 9, 10, 1 \}$ & 6 \\
@@ -136,11 +136,11 @@
         11 & $\Gr = \{ 11, 4, 5, 3, 7, 12, 2, 9, 8, 10, 6, 1 \}$ & 12, ген. \\
         12 & $\Gr^{(2)} = \{ 12, 1 \}$ & 2 \\
         \hline
-    \end{tabular} }
+    \end{tabular}
 \end{table}
 \exampleend
 
-\subsection{Группа $\mathbb{Z}_n^*$}
+\subsection{Группа \texorpdfstring{$\mathbb{Z}_n^*$}{Zn*}}
 
 \emph{Функция Эйлера}\index{функция!Эйлера} $\varphi(n)$ определяется как количество натуральных чисел, взаимно простых с $n$ на отрезке от 1 до $n-1$.
 
@@ -180,7 +180,7 @@
         \hline
         Элемент & Порождаемая циклическая подгруппа & Порядок \\
         \hline
-        \rule{}{0,4cm}1  & $\Gr^{(1)} = \{ 1 \}$ & 1 \\
+        1  & $\Gr^{(1)} = \{ 1 \}$ & 1 \\
         2  & $\Gr_1^{(6)} = \{ 2, 4, 8, 16, 11, 1 \}$ & 6 \\
         4  & $\Gr_1^{(3)} = \{ 4, 16, 1 \}$ & 3 \\
         5  & $\Gr_2^{(6)} = \{ 5, 4, 20, 16, 17, 1 \}$ & 6 \\
