Исправление overfill / underfill проблем

--- a/appendix/euclidean_algorithm.tex
+++ b/appendix/euclidean_algorithm.tex
@@ -21,7 +21,7 @@
 
 \subsection{Расширенный алгоритм Евклида}\index{алгоритм!Евклида!расширенный}
 
-\emph{Расширенный алгоритм Евклида} (см., например,~\cite[8.8 Наибольшие общие делители и алгоритм Евклида]{Aho:1979}) для целых $a, b: a > b$ находит
+\emph{Расширенный алгоритм Евклида} для целых $a, b: a > b$ находит\footnote{См., например,~\cite[8.8 Наибольшие общие делители и алгоритм Евклида]{Aho:1979}.}
     \[ x, y, d = \gcd(a,b): ax + by = d. \]
 
 Введём обозначения: $g_i$ -- частное от деления, $r_i$ -- остаток от деления на $i$-м шаге. Алгоритм:
@@ -65,7 +65,7 @@
 
 \subsection[Нахождение мультипликативного обратного]{Нахождение мультипликативного \protect\\ обратного по модулю}
 
-Расширенный алгоритм Евклида можно использовать для вычисления обратного элемента\index{обратный элемент}: для заданных $a, n$ найти $x, y, d = \gcd(a,n): ax + ny = d$. Пусть $a,n$ -- взаимно простые, тогда:
+Расширенный алгоритм Евклида можно использовать для вычисления обратного элемента\index{обратный элемент}: для заданных $a$ и $n$ найти $x, y, d = \gcd(a,n): ax + ny = d$. Пусть $a,n$ -- взаимно простые, тогда:
 \[\begin{array}{l}
 	ax + ny = 1, \\
 	ax \equiv 1 \mod n, \\
