--- a/appendix/groups.tex
+++ b/appendix/groups.tex
@@ -220,7 +220,7 @@
 		\[\exists 1 \in \F: \forall a \in \F ~ a \cdot 1 = 1 \cdot a = a;\]
         4. существование обратного элемента по умножению для всех элементов множества, кроме нейтрального элемента по сложению:
 		\[\forall a \in {\F \setminus \{0\}} \exists a^{-1}: a \cdot a^{-1} = a^{-1} \cdot a = 1;\]
-    \item операции <<сложения>> и <<умножения>> коммутативны: \\
+    \item операции <<сложения>> и <<умножения>> коммутативны:
         \[ \begin{array}{l}
             \forall a, b \in \F ~ a + b = b + a, \\
             \forall a, b \in \F ~ a \cdot b = b \cdot a; \\
@@ -286,9 +286,9 @@
     \caption{Пример многочленов над полем $\GF{2}$\label{tab:irreducible-gf2}}
     \begin{tabular}{|c|c|c|}
         \hline
-        Многочлен & \parbox[c][1cm][c]{2.5cm}{\centering Упрощённая запись} & Разложение \\
+        Многочлен & \parbox[c][1cm][c]{2.4cm}{\centering Упрощённая запись} & Разложение \\
         \hline
-        \rule{0pt}{2.5ex}$'1' x + '0'$ & $x$ & неприводимый \\
+        $'1' x + '0'$ & $x$ & неприводимый \\
         $'1' x + '1'$ & $x+1$ & неприводимый \\
         $'1' x^2 + '0' x + '0'$ & $x^2$ & $x \cdot x$ \\
         $'1' x^2 + '0'x + '1'$ & $x^2 + 1$ & $(x+1) \cdot (x+1)$ \\
