--- a/appendix/tasks.tex
+++ b/appendix/tasks.tex
@@ -234,7 +234,8 @@
 		a_{4} \oplus a_{3} = 0 \\
 		a_{4} = 1 \\
 	\end{array} } \right.\]
-	\item Найденные из системы уравнения коэффициенты $\left(a_{4}, a_{3}, a_{2}, a_{1}\right) = \left(1 , 1 , 1 , 0\right)$.
+	\item Найденные из системы уравнения коэффициенты:
+        \[\left(a_{4}, a_{3}, a_{2}, a_{1}\right) = \left(1 , 1 , 1 , 0\right).\]
 	\item Характеристический полином регистра:
 		\[\begin{array}{l}
 			m \left( x \right) = x^{5}+ a_{4} x^{4}+ a_{3} x^{3}+ a_{2} x^{2}+ a_{1} x^{1} + 1; \\
