--- a/appendix/index.tex
+++ b/appendix/index.tex
@@ -36,7 +36,7 @@
 
 \input{groups_of_ec_points_over_finite_fields}
 
-\section[Полиномиальные и экспоненциальные алгоритмы]{Полиномиальные и \\ экспоненциальные алгоритмы}
+\section{Классы сложности задач}
 
 Данный раздел поясняет обоснованность стойкости криптосистем с открытым ключом и имеет лишь косвенное отношение к дискретной математике.
 
