--- a/appendix/prime-check-miller-rabin.tex
+++ b/appendix/prime-check-miller-rabin.tex
@@ -31,27 +31,48 @@
 двоичных операций, где $t$ -- количество раундов.
 
 \example
-В таблице~\ref{tab-miller-rabin-sample} содержится пример теста Миллера~---~Рабина для $n = 169, ~ n-1 = 21 \cdot 2^3$.
-\begin{table}[!ht]
-    \centering
-    \caption{Пример теста Миллера~---~Рабина для $n = 169$ и четырёх оснований $a$: 19, 22, 23, 2\label{tab-miller-rabin-sample}}
-    \resizebox{\textwidth}{!}{ \begin{tabular}{||c|l|p{0.35\textwidth}||}
-        \hline
-        $a$ & $a_i \mod n$ & Вывод \\
-        \hline \hline
-        $19$ & $a_0 = a^r = 19^{21} = 70 \neq \pm 1 \mod 169$ & Возводим далее в квадрат \\
-             & $a_1 = a_0^2 = -1 \mod 169$ & \textsc{Псевдопростое по основанию} $a=19$ \\
-        \hline \hline
-        $22$ & $a_0 = a^r = 22^{21} = 1 \mod 169$ & \textsc{Псевдопростое по основанию} $a=22$\\
-        \hline \hline
-        $23$ & $a_0 = a^r = 23^{21} = -1 \mod 169$ & \textsc{Псевдопростое по основанию} $a=23$\\
-        \hline \hline
-        $2$  & $a_0 = a^r = 2^{21} = 31 \neq \pm 1 \mod 169$ & Возводим далее в квадрат \\
-             & $a_1 = a_0^2 = 116 \neq -1 \mod 169$ & Возводим далее в квадрат\\
-             & $a_{s-1=2} = a_1^2 = 105 \neq -1 \mod 169$ & \textsc{Составное} \\
-        \hline
-    \end{tabular} }
-\end{table}
+Пример выполнения теста Миллера~---~Рабина для $n = 169, ~ n-1 = 21 \cdot 2^3$.
+
+Выберем следующие числа в качестве возможных кандидатов в свидетели простоты числа $n$: 2, 19, 22, 23.
+
+Степени, в которые нужно возводить $a$: 21, 42, 84, 168.
+
+\begin{itemize}
+    \item $a = 2$
+        \[\begin{matrix}
+        a^{21} \bmod 169 & = & 2^{21} \bmod 169 & = & 31 \\ 
+        a^{42} \bmod 169 & = & 31^2 \bmod 169 & = & 116 \\ 
+        a^{84} \bmod 169 & = & 116^2 \bmod 169 & = & 116 \\ 
+        a^{168} \bmod 169 & = & 116^2 \bmod 169 & = & 40
+        \end{matrix}\]
+    Получилась последовательность: 31, 116, 105, 40.
+    \item $a = 19$
+        \[\begin{matrix}
+        a^{21} \bmod 169 & = & 19^{21} \bmod 169 & = & 70 \\ 
+        a^{42} \bmod 169 & = & 70^2 \bmod 169 & = & -1 \\ 
+        a^{84} \bmod 169 & = & -1^2 \bmod 169 & = & 1 \\ 
+        a^{168} \bmod 169 & = & 1^2 \bmod 169 & = & 1
+        \end{matrix}\]
+    Получилась последовательность: 70, -1, 1, 1.
+    \item $a = 22$
+        \[\begin{matrix}
+        a^{21} \bmod 169 & = & 22^{21} \bmod 169 & = & 1 \\ 
+        a^{42} \bmod 169 & = & 1^2 \bmod 169 & = & 1 \\ 
+        a^{84} \bmod 169 & = & 1^2 \bmod 169 & = & 1 \\ 
+        a^{168} \bmod 169 & = & 1^2 \bmod 169 & = & 1
+        \end{matrix}\]
+    Получилась последовательность: 1, 1, 1, 1.
+    \item $a = 23$
+        \[\begin{matrix}
+        a^{21} \bmod 169 & = & 23^{21} \bmod 169 & = & -1 \\ 
+        a^{42} \bmod 169 & = & -1^2 \bmod 169 & = & 1 \\ 
+        a^{84} \bmod 169 & = & 1^2 \bmod 169 & = & 1 \\ 
+        a^{168} \bmod 169 & = & 1^2 \bmod 169 & = & 1
+        \end{matrix}\]
+    Получилась последовательность: -1, 1, 1, 1.
+\end{itemize}
+
+Согласно определению выше, числа 19, 22 и 23 являются свидетелями простоты числа $n=169$ по Миллеру. Если бы мы рассматривали только эти числа в качестве кандидатов в свидетели, то результатом работы алгоритма Миллера~---~Рабина был бы вывод, что число $n=169$ является псевдопростым с вероятностью ошибки $e = 1 / 4^3 = 0{,}015625 \approx 1{,}6\%$. Однако так как в результате проверки числа $a = 2$ было обнаружено, что оно не является свидетелем простоты, то результатом работы алгоритма является вывод, что число $n=169$ составное.
 \exampleend
 
 Тест Миллера~---~Рабина не основан на гипотезе Римана или других недоказанных утверждениях. Он является доказанным, полиномиальным, но вероятностным тестом простоты. Также он является наиболее используемым тестом простоты на сегодняшний день.
