Замена UNICODE-символов символами TeX

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -387,7 +387,7 @@
 	title		= {Safeguarding Cryptographic Keys},
 	journal		= {Managing Requirements Knowledge, International Workshop on},
 	year		= {1979},
-	pages		= {313—317},
+	pages		= {313--317},
 	doi		= {10.1109/AFIPS.1979.98},
 	publisher	= {IEEE Computer Society},
 	address		= {Los Alamitos, CA, USA},
@@ -557,7 +557,7 @@
 
 @techreport{ISO:7498-2:1989,
 	institution	= {ISO/IEC JTC 1 Information technology},
-	title		= {ISO 7498-2:1989. Information processing systems — Open Systems Interconnection — Basic Reference Model — Part 2: Security Architecture},
+	title		= {ISO 7498-2:1989. Information processing systems -- Open Systems Interconnection -- Basic Reference Model -- Part 2: Security Architecture},
 	type		= {Standard},
 	year		= {1989},
 	month		= {2},
@@ -653,7 +653,7 @@
 @incollection{Girault:1990,
 	author		= {Girault, Marc},
 	title		= {An Identity-based Identification Scheme Based on Discrete Logarithms Modulo a Composite Number},
-	booktitle	= {Advances in Cryptology — EUROCRYPT ’90},
+	booktitle	= {Advances in Cryptology -- EUROCRYPT ’90},
 	editor		= {Damgård, Ivan Bjerre},
 	volume		= {473},
 	year		= {1991},
@@ -707,7 +707,7 @@
 @incollection{Girault:1991,
 	author		= {Girault, Marc},
 	title		= {Self-Certified Public Keys},
-	booktitle	= {Advances in Cryptology — EUROCRYPT ’91},
+	booktitle	= {Advances in Cryptology -- EUROCRYPT ’91},
 	editor		= {Davies, Donald W.},
 	volume		= {547},
 	year		= {1991},
@@ -722,7 +722,7 @@
 @incollection{Campbell:Wiener:1993,
 	author		= {Campbell, Keith W. and Wiener, Michael J.},
 	title		= {DES is not a Group},
-	booktitle	= {Advances in Cryptology — CRYPTO’ 92},
+	booktitle	= {Advances in Cryptology -- CRYPTO’ 92},
 	editor		= {Brickell, Ernest F.},
 	year		= {1993},
 	volume		= {740},
@@ -902,7 +902,7 @@
 	month		= {5},
 	volume		= {48},
 	number		= {3},
-	pages		= {351–406},
+	pages		= {351--406},
 	address		= {New York, NY, USA},
 	doi		= {10.1145/382780.382781},
 	language	= {English},
@@ -1305,7 +1305,7 @@
 	address		= {Gaithersburg},
 	institution	= {National Institute of Standards {and} Technology ({NIST})},
 	type		= {{NIST} Special Publication 800-57, revised},
-	title		= {Recommendation for Key Management – Part 1: General (Revision 3)},
+	title		= {Recommendation for Key Management -- Part 1: General (Revision 3)},
 	url		= {http://csrc.nist.gov/publications/nistpubs/800-57/sp800-57_part1_rev3_general.pdf},
 }
 
