--- a/substitution_ciphers.tex
+++ b/substitution_ciphers.tex
@@ -7,4 +7,4 @@
 
 Шифры называются \emph{моноалфавитными}, когда для шифрования используется одно отображение входного алфавита в выходной алфавит. Если алфавиты на входе и выходе одинаковы, и их размеры (число символов) равны $D$, тогда $D!$ -- количество всевозможных моноалфавитных шифров замены такого типа.
 
-\emph{Полиалфавитный} шифр задаётся множеством различных вариантов отображения входного алфавита на выходной алфавит. Шифры замены могут быть как потоковыми, так и блочными. Однозначный полиалфавитный потоковый шифр замены называется \emph{шифром гаммирования}\index{шифр!гаммирования}. Символом алфавита может быть, например, 256-битовое слово, а размер алфавита – $2^{256}$ соответственно.
+\emph{Полиалфавитный} шифр задаётся множеством различных вариантов отображения входного алфавита на выходной алфавит. Шифры замены могут быть как потоковыми, так и блочными. Однозначный полиалфавитный потоковый шифр замены называется \emph{шифром гаммирования}\index{шифр!гаммирования}. Символом алфавита может быть, например, 256-битовое слово, а размер алфавита -- $2^{256}$ соответственно.
