Добавлена общая схема трёхпроходных протоколов

--- a/protocols/three-pass.tex
+++ b/protocols/three-pass.tex
@@ -3,6 +3,12 @@
 
 Если между Алисой и Бобом существует канал связи, недоступный для модификации злоумышленником (то есть когда применима модель только пассивного криптоаналитика), то даже без предварительного обмена секретными ключами или другой информацией можно воспользоваться идеями, использованными ранее в криптографии на открытых ключах. После описания RSA в 1978 году, в 1980 Ади Шамир предложил использовать криптосистемы, основанные на коммутативных операциях, для передачи информации без предварительного обмена секретными ключами. Если предположить, что передаваемой информацией является выработанный одной из сторон секретный сеансовый ключ, то в общем виде мы получаем следующий трёхпроходной протокол.
 
+\begin{figure}[!hb]
+    \centering
+    \includegraphics[width=0.5\textwidth]{pic/key_distribution-three-pass}
+    \caption{Общая схема взаимодействия участников в трёхпроходных протоколах\label{fig:key_distribution-three-pass}}
+\end{figure}
+
 Предварительно:
 
 \begin{itemize}
@@ -15,7 +21,8 @@
 	\end{array}\]
 \end{itemize}
 
-Протокол состоит из трёх проходов с передачей сообщений (отсюда и название) и одного заключительного, на котором Боб получает ключ.
+Схема взаимодействия участников протокола показана на рис.~\ref{fig:key_distribution-three-pass}. Протокол состоит из трёх проходов с передачей сообщений (отсюда название) и одного заключительного, на котором Боб вычисляет сеансовый ключ.
+
 \begin{protocol}
     \item[(1)] Алиса выбирает новый сеансовый ключ $K$
     \item[{}] $Alice \to \left\{ E_A \left( K \right) \right\} \to Bob$
